# llm-config-manager

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DELIVERABLES-SUMMARY.txt  Dockerfile  README.md  benchmarks.sh  completion-roadmap.json  docker-compose.yml  refinement-strategy.json
.cargo/: config.toml
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.github/workflows/: npm-publish.yml  security-scan.yml  security.yml
config/: development.yaml  production.yaml  staging.yaml
crates/llm-config-api/: Cargo.toml  README.md  index.js  package.json
crates/llm-config-api/src/: lib.rs  middleware.rs  routes.rs  server.rs
crates/llm-config-api/tests/: security_integration_tests.rs
crates/llm-config-audit/: Cargo.toml  README.md  index.js  package.json
crates/llm-config-audit/src/: events.rs  lib.rs  logger.rs  storage.rs
crates/llm-config-cache/: Cargo.toml  README.md  index.js  package.json
crates/llm-config-cache/benches/: cache_benchmarks.rs
crates/llm-config-cache/src/: l1.rs  l2.rs  lib.rs  manager.rs
crates/llm-config-cli/: Cargo.toml  README.md  index.d.ts  index.js  package.json
crates/llm-config-cli/src/: main.rs
crates/llm-config-core/: Cargo.toml  README.md  index.js  package.json
crates/llm-config-core/benches/: core_benchmarks.rs
crates/llm-config-core/src/: config.rs  error_utils.rs  lib.rs  manager.rs  version.rs
crates/llm-config-crypto/: Cargo.toml  README.md  package.json
crates/llm-config-crypto/benches/: crypto_benchmarks.rs  encryption.rs
crates/llm-config-crypto/src/: key_derivation.rs  lib.rs
crates/llm-config-devtools/: Cargo.toml  README.md  index.js  package.json
crates/llm-config-devtools/src/: error.rs  lib.rs
crates/llm-config-devtools/src/report/: json.rs  markdown.rs  mod.rs  sarif.rs  yaml.rs
crates/llm-config-devtools/src/security/: clippy.rs  mod.rs  secret.rs  sql.rs  unsafe_code.rs
crates/llm-config-integration-tests/: Cargo.toml  index.js  package.json
crates/llm-config-integration-tests/src/: lib.rs
crates/llm-config-integration-tests/tests/: integration_test.rs
crates/llm-config-metrics/: Cargo.toml  README.md  index.js  package.json
crates/llm-config-metrics/src/: collectors.rs  health.rs  lib.rs
crates/llm-config-rbac/: .npmignore  Cargo.toml  README.md  package.json
crates/llm-config-rbac/benches/: rbac_benchmarks.rs
crates/llm-config-rbac/src/: lib.rs  permissions.rs  policy.rs  roles.rs
crates/llm-config-security/: Cargo.toml  README.md  package.json
crates/llm-config-security/src/: audit.rs  crypto.rs  errors.rs  input.rs  lib.rs  policy.rs  rate_limit.rs  validation.rs
crates/llm-config-storage/: Cargo.toml  README.md  index.js  package.json
crates/llm-config-storage/src/: file.rs  lib.rs  models.rs
crates/llm-config-templates/: .npmignore  Cargo.toml  README.md  package.json
crates/llm-config-templates/src/: engine.rs  lib.rs  parser.rs  template.rs
deployment/helm/llm-config-manager/: .helmignore  Chart.yaml  README.md  values.yaml
deployment/kubernetes/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  pdb.yaml  postgres.yaml  pvc.yaml  rbac.yaml  redis.yaml  secrets.yaml  service.yaml  servicemonitor.yaml
deployment/scripts/: README.md  deploy-docker.sh  deploy-helm.sh  deploy-kubernetes.sh  deploy-systemd.sh
deployment/systemd/: README.md  environment  llm-config-backup.service  llm-config-backup.timer  llm-config-cleanup.service  llm-config-cleanup.timer  llm-config-healthcheck.service  llm-config-healthcheck.timer  llm-config-manager.service
docs/: 5-COMPLETION.md  ARCHITECTURE.md  BENCHMARKS.md  COMPLETION-ROADMAP-SUMMARY.md  COMPLIANCE-SECURITY-DOCUMENTATION-COMPLETE.md  CONFIGURATION.md  CONTRIBUTING.md  DEPLOYMENT-COMPLETE.md  DEPLOYMENT.md  DOCUMENTATION-COMPLETE.md  ERROR_HANDLING.md  EXECUTIVE-SUMMARY.md  IMPLEMENTATION-ROADMAP.md  INTEGRATION_ARCHITECTURE_DIAGRAM.md  METRICS-MONITORING-COMPLETE.md  MONITORING.md  NPM-PACKAGES.md  PHASE1-IMPLEMENTATION-COMPLETE.md  PHASE2-IMPLEMENTATION-COMPLETE.md  PRODUCTION-READINESS-REPORT.md  QUICK-START-GUIDE.md  README.md  REFINEMENT_DELIVERABLES.txt  REFINEMENT_INDEX.md  REFINEMENT_PHASE_SUMMARY.md  REFINEMENT_QUICK_REFERENCE.md  REQUIREMENTS_ANALYSIS.md  REQUIREMENTS_EXECUTIVE_BRIEF.md  REQUIREMENTS_INDEX.md  REQUIREMENTS_SUMMARY.md  RESEARCH_QUICK_REFERENCE.md  RESEARCH_SUMMARY.md  ROADMAP-INDEX.md  ROADMAP-QUICK-REFERENCE.md  ROADMAP-TIMELINE.md  SECURITY-COMPLETE.md  SECURITY-INTEGRATION-COMPLETE.md  SECURITY-INTEGRATION.md  SECURITY.md  SHELL-TO-RUST-ANALYSIS.md  (+4 more)
docs/api/: README.md  authentication.md  errors.md  openapi.yaml  rate-limits.md
docs/api/examples/: README.md  curl-examples.sh  go-client.go  nodejs-client.js  python-client.py
docs/compliance/: GDPR-COMPLIANCE.md  HIPAA-ISO27001-COMPLIANCE.md  README.md  SOC2-COMPLIANCE.md  audit-guide.md  data-privacy.md
docs/operations/: OPERATIONS-DOCUMENTATION-COMPLETE.md  README.md  backup-restore.md  disaster-recovery.md  incident-response.md  monitoring.md
docs/operations/runbooks/: common-issues.md  health-checks.md  performance-troubleshooting.md  startup-shutdown.md
docs/security/: pentest-report.md
docs/security/policies/: access-control-policy.md  encryption-policy.md  incident-response-policy.md
docs/user-guide/: INDEX.md  configuration.md  getting-started.md  integration.md  troubleshooting.md
docs/user-guide/examples/: README.md  (+1 more)
monitoring/: README.md
monitoring/prometheus/: alerts.yml  prometheus.yml
plans/: ARCHITECTURE-PHASE.md  ARCHITECTURE-SUMMARY.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  ARCHITECTURE_OVERVIEW.md  ARCHITECTURE_SUMMARY.md  FUNCTIONAL_CORES_MAPPING.md  PLANNING-COMPLETE.md  PSEUDOCODE.md  README.md  REFINEMENT.md  RUST_CRATES_REFERENCE.md  SECURITY_ARCHITECTURE.md  SECURITY_SUMMARY.md  SPARC-SPECIFICATION.md  SPECIFICATION.json  SPECIFICATION_SUMMARY.md  architecture-design.json  pseudocode.json
security/scanners/: code-scanner.sh  dependency-scanner.sh
(+16 files in other folders)
