[package]
name = "llm-config-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
llm-config-core = { path = "../llm-config-core" }
llm-config-crypto = { path = "../llm-config-crypto" }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace"] }
hyper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
