[package]
name = "llm-config-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "REST API server for LLM Config Manager with JWT authentication, RBAC, rate limiting, and comprehensive security features"
keywords = ["api", "rest", "server", "config", "axum"]
categories = ["web-programming", "config"]

[dependencies]
llm-config-core = { version = "0.5.0", path = "../llm-config-core" }
llm-config-crypto = { version = "0.5.0", path = "../llm-config-crypto" }
llm-config-security = { version = "0.5.0", path = "../llm-config-security" }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace"] }
hyper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
