[package]
name = "llm-config-audit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Comprehensive audit logging system with tamper-proof logs, change tracking, and compliance reporting"
keywords = ["audit", "logging", "compliance", "tracking", "security"]
categories = ["development-tools", "config"]

[dependencies]
llm-config-core = { version = "0.5.0", path = "../llm-config-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
