[package]
name = "llm-config-cache"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Multi-tier caching system with L1/L2 cache support, TTL management, and cache invalidation strategies"
keywords = ["cache", "caching", "performance", "memory", "config"]
categories = ["caching", "config"]

[dependencies]
llm-config-core = { version = "0.5.0", path = "../llm-config-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "cache_benchmarks"
harness = false
