[package]
name = "llm-config-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Command-line interface for LLM Config Manager with interactive prompts, colored output, and comprehensive configuration management"
keywords = ["cli", "command-line", "config", "configuration", "management"]
categories = ["command-line-utilities", "config"]

[[bin]]
name = "llm-config"
path = "src/main.rs"

[dependencies]
llm-config-core = { path = "../llm-config-core" }
llm-config-crypto = { path = "../llm-config-crypto" }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
colored = "2.1"
indicatif = "0.17"
