[package]
name = "llm-config-crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Cryptography primitives for LLM Config Manager - AES-256-GCM encryption, key derivation, and secure key management"
keywords = ["cryptography", "encryption", "security", "aes", "config"]
categories = ["cryptography", "config"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ring = { workspace = true }
chacha20poly1305 = { workspace = true }
argon2 = { workspace = true }
zeroize = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
rand = "0.8"
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "crypto_benchmarks"
harness = false
