[package]
name = "llm-config-devtools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Development and security tools for LLM Config Manager"
keywords = ["security", "scanning", "devtools", "audit"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "cargo", "env"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# File system and path handling
walkdir = "2.5"
ignore = "0.4"

# Regex and pattern matching
regex = "1.10"
lazy_static = "1.4"

# Parallel processing
rayon = "1.10"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Cargo integration
cargo_metadata = "0.18"

# Process execution
which = "6.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Terminal colors
colored = "2.1"

# Git integration
git2 = "0.18"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"
insta = "1.36"

[lib]
name = "llm_config_devtools"
path = "src/lib.rs"

[[bin]]
name = "llm-security-scan"
path = "src/bin/security_scan.rs"

[[bin]]
name = "llm-dependency-scan"
path = "src/bin/dependency_scan.rs"
