[package]
name = "llm-config-rbac"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Role-Based Access Control (RBAC) system with fine-grained permissions, namespace isolation, and policy enforcement"
keywords = ["rbac", "authorization", "access-control", "permissions", "security"]
categories = ["authentication", "config"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "rbac_benchmarks"
harness = false
