[package]
name = "llm-config-security"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Security hardening and validation for LLM Config Manager with input validation, rate limiting, and threat protection"
keywords = ["security", "validation", "rate-limiting", "hardening", "config"]
categories = ["authentication", "config"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["async"]
async = ["tokio", "async-trait"]
wasm = ["wasm-bindgen", "getrandom/js"]

[dependencies]
# Core dependencies
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Validation
validator = { version = "0.16", features = ["derive"] }
regex = "1.10"

# Cryptography
sha2 = "0.10"
hmac = "0.12"
argon2 = "0.5"
constant_time_eq = "0.3"

# Security
secrecy = { version = "0.8", features = ["serde"] }
zeroize = "1.7"

# Rate limiting
governor = "0.6"
nonzero_ext = "0.3"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Async (optional for WASM)
tokio = { version = "1.35", features = ["full"], optional = true }
async-trait = { version = "0.1", optional = true }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# WASM support
wasm-bindgen = { version = "0.2", optional = true }
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
proptest = "1.4"

# [[bench]]
# name = "security_benchmarks"
# harness = false
