[package]
name = "llm-config-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Persistent storage backend for LLM Config Manager using embedded Sled database with encryption support"
keywords = ["storage", "database", "config", "persistence", "sled"]
categories = ["database", "config"]

[dependencies]
llm-config-crypto = { version = "0.5.0", path = "../llm-config-crypto" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
sled = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
proptest = { workspace = true }
