[package]
name = "llm-config-templates"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Configuration template system with variable substitution, inheritance, and environment-specific overrides"
keywords = ["templates", "config", "substitution", "configuration", "variables"]
categories = ["config", "template-engine"]

[dependencies]
llm-config-core = { version = "0.5.0", path = "../llm-config-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
