[package]
name = "llm-config-templates"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Configuration template system with variable substitution, inheritance, and environment-specific overrides"
keywords = ["templates", "config", "substitution", "configuration", "variables"]
categories = ["config", "template-engine"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = ["wasm-bindgen", "getrandom/js"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
wasm-bindgen = { version = "0.2", optional = true }
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
